<resources>
    <string name="app_name">Read For Me</string>
    <string name="blindKey">blindSharedPrefs</string>
    <!-- login -->
    <string name="welcome">Welcome !</string>
    <string name="next">NEXT</string>
    <string name="login_name">Enter your Email</string>
    <string name="login_pass">Password</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="newUser">NEW USER ?</string>
    <string name="signInHere">Sign up here !</string>
    <string name="signIn">Sign In</string>
    <!-- sign up -->
    <string name="signup">Sign up</string>
    <string name="createAccount">Create New Account</string>
    <string name="addPicture">Add picture</string>
    <string name="firstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="birth_date">Birth date</string>
    <string name="gender">Gender</string>
    <!-- profile -->
    <string name="follow">Follow</string>
    <string name="likes">likes</string>
    <string name="followerz">Followers</string>
    <string name="tracks">Tracks</string>
    <string name="unfollow">Unfollow</string>
    <!-- My profile -->
    <string name="edit">Edit profile</string>
    <string name="my_profile">My Profile</string>
    <!-- New Record -->
    <string name="new_record">New Record</string>
    <string name="import_new_file">IMPORT NEW FILE</string>
    <string name="record">Record</string>
    <!-- Favourites -->
    <string name="favourites">Favourites</string>
    <!-- Connected playlists -->
    <string name="playlists">Playlists</string>
    <!-- My playlists -->
    <string name="myplaylists">My playlists</string>
    <!-- Followers -->
    <string name="followers">My followers</string>
    <!-- Followers -->
    <string name="followings">My followings</string>
    <string name="player">Player</string>
    <!-- track Dialog -->
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="post">Post</string>
    <string name="repost">Repost</string>
    <string name="favoures">Favourite</string>
    <string name="addToPlaylist">Playlist</string>
    <string name="Stop">Stop</string>
    <string name="Pause">Pause</string>
    <string name="Record">Record</string>

    <!-- validation error -->
    <string name="username_error">Enter a valid username</string>
    <string name="email_error">Enter a valid email</string>
    <string name="password_error">Enter a valid password</string>
    <string name="gender_error">Enter a valid gender </string>

    <string name="are_u_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="write_something">Write something</string>
    <string name="write_playlist_name">Write playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="download_started">Download started</string>
    <string name="add">Add</string>
    <string name="new_playlist">Create new playlist</string>
    <string name="create">Create</string>
    <string name="my">My</string>
    <string name="network_error">Network Error</string>
    <string name="application_error">Application Error</string>
    <string name="track_deleted">Track deleted</string>
    <string name="post_posted">Posted !</string>
    <string name="track_added_favourite">Track added to favourite !</string>
    <string name="track_removed_favourite">track removed from favourite !</string>
    <string name="playlist_added">Playlist added</string>
    <string name="playlist_name">Playlist name</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="Remove">Remove</string>
    <string name="followz">Followings</string>
    <string name="artist_unfollowed">Artist unfollowed</string>
    <string name="artist_followed">Artist followed</string>
    <string name="unfollow_question">Are you sure ?</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="track_removed_from_playlist">Track removed from playlist</string>
    <string name="delete_playlist_question">Are you sure ?</string>
    <string name="remove_track_from_playlist_question">Are you sure ?</string>
    <string name="First_Name">First name</string>
    <string name="Last_Name">Last name</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="rather_not_say">Other</string>
    <string name="Gender">Gender</string>
    <string name="Studio">Studio</string>
    <string name="New_track">New track</string>
    <string name="Save">Save</string>
    <string name="Share">Share</string>
    <string name="share_track">Where do you want to share your track ?</string>
    <string name="facebook">Facebook</string>
    <string name="Done">Done</string>
    <string name="track_name">Track name</string>
    <string name="Track_desc">Track description</string>
    <string name="start_dialog">When do you want this to start ?</string>
    <string name="set">Set</string>
    <string name="amplification">Amplification</string>
    <string name="echo">Echo</string>
    <string name="Normalisation">Normalisation</string>
    <string name="inversion">Reverse</string>
    <string name="enveloppe">Enveloppe</string>
    <string name="reverb">Reverb</string>
    <string name="cancel_bruit">Noize reduction</string>
    <string name="speed">Speed</string>
    <string name="unset">Unset</string>
    <string name="file_ready">Your file is ready</string>
    <string name="saving">Saving ...</string>
    <string name="you_are_recording">You are recording</string>
    <string name="file_is_playing">The file is playing</string>
    <string name="record_and_import">You have to record a file</string>
    <string name="Home">Files</string>
    <string name="logged_in">Loged in !</string>
    <string name="ctoserver">Connecting to server</string>
    <string name="error_log_in">Error logging in</string>
    <string name="welcome_new_user">Welcome new user</string>
    <string name="error">Error !</string>
    <string name="suggestions">Suggestions</string>
    <string name="uploading">Uploading</string>
    <string name="must_enter_name">You must enter a name</string>
    <string name="Downloading">Downloading</string>
    <string name="download_completed">Download completed</string>
    <string name="error_uploading_track">Error uploading the track</string>
    <string name="error_update_profile">Your profile won\'t be updating</string>
    <string name="profile_updating">Updating</string>
    <string name="loading_track_error">Loading Track Error</string>
    <string name="file_downloading">Your file is downloading</string>
    <string name="downloaded_into">Downloaded into</string>
    <string name="error_downloading_file">Error downloading the file</string>
    <string name="shared">Shared</string>
    <string name="by">By</string>
    <string name="downloading">Downloading</string>
    <string name="last_name">Last name</string>
    <string name="fist_name">First name</string>
    <string name="fname_uncorrect">Invalid first name</string>
    <string name="lname_incorrect">Invalid last name</string>
    <string name="news_feed">News</string>
    <string name="studio">Studio</string>
    <string name="keep_original">Do you want to keep the original files ?</string>
    <string name="cant_read_record">Error reading the recorded file</string>
    <string name="error_imorted_file">Error reading the imported file</string>
    <string name="Error_writin_dis">Error writing file on the disk</string>
    <string name="Error_converting">Error while converting the file</string>
    <string name="change_filename">Please change the file name</string>
    <string name="are_u_sure_close_editor">Are you sure you want to close the editor ?</string>
    <string name="History">History</string>
    <string name="slogon">Music is the key, share it</string>

    <string name="facebook_app_id">256268084880625</string>
    <string name="fb_login_protocol_scheme">fb256268084880625</string>
    <string name="file_name">File name</string>
    <string name="no_file_imported">No file has been imported</string>
    <string name="error_apply_effects">Error Applying the effects</string>
    <string name="file_uploaded">Your file has been uploaded</string>
    <string name="volunteername_error">email is requered</string>
    <string name="numberOfPages">How many pages You went to Read</string>
    <string name="title">title exemple</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus, turpis quis hendrerit lacinia, ipsum mauris dapibus orci, a vehicula est justo ac felis. Curabitur felis mi, ultrices sed laoreet ac, pharetra volutpat felis. Proin id vestibulum elit. Nullam imperdiet quam venenatis justo porttitor</string>
    <string name="action_search">search</string>
    <string name="action_settings">settings</string>
    <string name="title_activity_pdf_record">Record</string>
    <string name="Exit">Exit</string>
    <string name="Play">Play</string>
    <string name="prassLogin">press to login</string>
    <string name="my_files">My files</string>
    <string name="new_file">New File</string>
    <string name="all_files">All Files</string>
    <string name="file_tilte">File Tilte</string>
    <string name="file_description">File Description</string>
    <string name="file_category">File Category</string>
    <string name="no_file">No File</string>
    <string name="import_file">Import File</string>
    <string name="choose_pdf_file">Choose PDF File</string>
    <string name="my_profile_menu">My Profile</string>
    <string name="all_files_menu">All Files</string>
    <string name="my_files_menu">My Files</string>
    <string name="new_files_menu">New File</string>
    <string name="logout_menu">Logout</string>
    <string name="shuffle">Shuffle</string>
    <string name="previous">Previous</string>
    <string name="repeat">Repeat</string>
    <string name="code">organisme code</string>

    <string name="files">My files</string>
    <string name="upload">upload a file</string>
</resources>
