<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="right|end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewCloseNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewCloseNot"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/imageViewCoverNot"
        android:gravity="center"
        android:padding="3dp"
        android:text="TextView"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageViewBackNot"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/textViewArtist"
            android:layout_below="@+id/textViewArtist"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_media_previous"
            android:contentDescription="@string/previous"/>

        <ImageView
            android:id="@+id/imageViewPlayNot"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/imageViewForwNot"
            android:layout_toEndOf="@+id/imageViewBackNot"
            app:srcCompat="@android:drawable/ic_media_play"
            android:contentDescription="@string/Play"/>

        <ImageView
            android:id="@+id/imageViewForwNot"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textViewArtist"
            android:layout_toEndOf="@+id/imageViewPlayNot"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_media_next"
            android:contentDescription="@string/next"/>

    </LinearLayout>

</LinearLayout>