<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlayerActivity"
    >
    <data>
        <variable name="track" type="ensias.readforme_blind.model.Track"/>
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="150"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listViewTrack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="horizontal"
                    tools:listitem="@layout/track_item" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:text="@{track.name}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    app:font="@{`Roboto`}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewCurrentDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0"
                        android:gravity="right"
                        android:text="0:00"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="0:00"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBarSong"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingStart="0dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_dark"
                    android:thumb="@drawable/apptheme_scrubber_control_selector_holo_dark"
                    android:thumbOffset="0dp" />

                <!-- Progress Bar/Seek bar -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewShuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle"
                    android:tint="@color/colorWhite"
                    app:srcCompat="@drawable/ic_shuffle_black_24dp" />

                <ImageView
                    android:id="@+id/imageViewPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/previous"
                    android:tint="@color/colorWhite"
                    app:srcCompat="@drawable/ic_fast_rewind_black_24dp" />

                <ImageView
                    android:id="@+id/imageViewPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/Play"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_play_arrow" />

                <ImageView
                    android:id="@+id/imageViewNext"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/next"
                    android:tint="@color/colorWhite"
                    app:srcCompat="@drawable/ic_fast_forward_black_24dp" />

                <ImageView
                    android:id="@+id/imageViewRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/repeat"
                    android:tint="@color/colorWhite"
                    app:srcCompat="@drawable/ic_repeat_black_24dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>